# spark-lineage

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  release-please-config.json  test_comprehensive.py  test_pipeline.py
.github/workflows/: release.yml
spark_lineage/: __init__.py  openlineage.py  report.py  serve.py
spark_lineage/core/: __init__.py  column_lineage.py  node.py  registry.py  store.py  tracked_df.py  tracked_reader.py  tracked_session.py  tracked_writer.py
spark_lineage/integrations/: __init__.py  kedro_hook.py
